# python-crash-course-project-15

./: die.py  die_visual.py  mpl_Squares.py  pyproject.toml  random_walk.py  rw_cisual.py  scatter_squares.py
ch-17/: hm_articles.py  hm_submissions.py  python_repos.py  python_repos_visual.py
ch18/: db.sqlite3  pyproject.toml
ch18/learning_logs/migrations/: 0001_initial.py
ch18/ll_project/: settings.py
earthquake_plotly/: eq_world_map.py  explore_data.py
