[project]
name = "python-crash-course-project-15"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "requests>=2.32.5",
]

[tool.uv.workspace]
members = [
    "ch18",
]
